--- a/src/components/Buttons/fab-Button/style.css
+++ b/src/components/Buttons/fab-Button/style.css
@@ -14,6 +14,7 @@ body {
     background: transparent;
     border: 0;
     cursor: pointer;
+    font-size: 28px;
   }
   
   .fab > button {
@@ -26,7 +27,6 @@ body {
     border-radius: 50%;
     border: 0;
     background: #1d91ea;
-  
     color: #f9f9f9;
     transition: 0.2s;
     rotate: 0;
@@ -38,13 +38,13 @@ body {
   
   .menu {
     position: absolute;
-    z-index: 0;
+    z-index: 0  ;
     top: 50%;
     left: 50%;
     width: 200px;
     height: 200px;
     translate: -50% -50%;
-    border: 80px solid rgba(255, 255, 255, 0.05);
+    border: 80px solid rgba(255, 255, 255, 0.233);
     border-radius: 50%;
     rotate: -220deg;
     scale: 0.7;
@@ -52,9 +52,9 @@ body {
     transition: 0.4s ease-out;
   }
   
-  .fab.open > button {
+  /* .fab.open > button {
     rotate: 45deg;
-  }
+  } */
   
   .fab.open .menu {
     rotate: 0deg;
@@ -77,16 +77,26 @@ body {
   }
   
   .menu > button:nth-child(1) {
-    left: 76px;
-    top: -62px;
+    left: 45px;
+    top: -45px;
+    font-size: 25px;
+    color: #e0e0e0;
   }
   
   .menu > button:nth-child(2) {
-    left: -20px;
-    top: -16px;
+    left: -40px;
+    top: -34px;
+    font-size: 28px;
+    color: #e0e0e0;
   }
   
   .menu > button:nth-child(3) {
-    left: -64px;
-    top: 80px;
+    left: -44px;
+    top: 45px;
+    font-size: 25px;
+    color: #e0e0e0;
+  }
+  a {
+    color: #e0e0e0;
+
   }
