--- a/src/components/Game/style.css
+++ b/src/components/Game/style.css
@@ -54,7 +54,7 @@
     height: 25px;
     border-radius: 15px;
     margin-left: 10px;
-
+    font-size: 15px;
 }
 
 @media screen and (max-width: 768px) {
